# sudoku-solver

./: .gitignore  CMakeLists.txt  GlobalFunctions.cpp  Makefile  README.md  Sudoku.cpp  main.cpp  runSolver.sh  runSolver.sh~  sudoku.launch
OpenCV/: opencv.cpp
backend/: README.md
frontend/: index.html
frontend/css/: bootstrap-theme.css  bootstrap.css  bootstrap.min.css  custom.css
frontend/js/: bootstrap.js  bootstrap.min.js  custom.js
include/: GlobalFunctions.h  GlobalFunctions.h~  Sudoku.h
inputs/: really-hard.txt
standalone/: CMakeLists.txt  GlobalFunctions.cpp  Makefile  Sudoku.cpp  main.cpp  runSolver.sh
standalone/OpenCV/: Makefile
standalone/include/: GlobalFunctions.h  Sudoku.h
standalone/inputs/: input3.txt
test/: AISoft_HW1  Sudoku_Solver  input.txt  input.txt-1.txt  runSolver.sh  runSolver.sh~  sudoku.launch  sudoku.launch~
web-server/: README.md
web-server/frontend/: config.json
web-server/frontend/css/: bootstrap-theme.min.css  custom.css
web-server/frontend/js/: custom.js
